lagt til modules, og endret pom slik at den kjører korrekt