@@ -9,42 +9,44 @@
     <version>1.0</version>
   </parent>
 
-  <groupId>fxui.bankapp</groupId>
-  <artifactId>bankapp-fxui</artifactId>
+  <groupId>group15.bank</groupId>
+  <artifactId>fxui</artifactId>
   <version>1.0</version>
 
-  <name>bankapp-fxui</name>
+  <name>fxui</name>
   <!-- FIXME change it to the project's website -->
   <url>https://gitlab.stud.idi.ntnu.no/it1901/groups-2023/gr2315/gr2315</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <javafx.version>17</javafx.version>
+    <maven.compiler.source>16</maven.compiler.source>
+    <maven.compiler.target>16</maven.compiler.target>
+    <javafx.version>16</javafx.version>
     <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
   </properties>
 
   <dependencies>
 
     <dependency>
-      <groupId>core.bankapp</groupId>
-      <artifactId>bankapp-core</artifactId>
+      <groupId>group15.bank</groupId>
+      <artifactId>core</artifactId>
       <version>1.0</version>
     </dependency>
     <!-- javafx -->
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>17</version>
+      <version>16</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>17</version>
+      <version>16</version>
     </dependency>
 
+
     <!-- junit testing with jupiter -->
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -107,9 +109,10 @@
         <plugin>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-maven-plugin</artifactId>
-          <version>${javafx.maven.plugin.version}</version>
+          <version>8.8.3</version>
           <configuration>
             <mainClass>ui.BankApp</mainClass>
+            <verbose>true</verbose>
           </configuration>
         </plugin>
         <!-- clean lifecycle, see
@@ -127,10 +130,27 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <configuration>
+            <compilerArgs>
+              <arg>--add-modules=jdk.incubator.vector</arg>
+            </compilerArgs>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>3.0.0-M7</version> <!-- pick your own version -->
+          <configuration>
+            <includes>
+              <include>**/*Test.java</include>
+              <include>**/*ControllerTest.java</include>
+              <!-- Include your test classes -->
+            </includes>
+            <skipTests>false</skipTests>
+            <argLine>
+              --add-opens bankapp.fxui/ui=ALL-UNNAMED
+              --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            </argLine>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
